Krakend upd and tasks/status delete added
