# tasks/internal/server/http_routes.go
@@ -11,9 +11,11 @@ func (h *HTTP) setRoutes(r *mux.Router) {
 
 	api.HandleFunc("/task", nest(h.handleAddTask, parseClaimsMiddleware)).Methods(http.MethodPost)
 	api.HandleFunc("/task", nest(h.handleUpdateTask, parseClaimsMiddleware)).Methods(http.MethodPut)
+	api.HandleFunc("/task/{id}", nest(h.handleDeleteTask, parseClaimsMiddleware)).Methods(http.MethodDelete)
 	api.HandleFunc("/tasks", nest(h.handleGetTasks, parseClaimsMiddleware)).Methods(http.MethodGet)
 
 	api.HandleFunc("/status", nest(h.handleAddStatus, parseClaimsMiddleware)).Methods(http.MethodPost)
 	api.HandleFunc("/status", nest(h.handleUpdateStatus, parseClaimsMiddleware)).Methods(http.MethodPut)
+	api.HandleFunc("/status/{id}", nest(h.handleDeleteStatus, parseClaimsMiddleware)).Methods(http.MethodDelete)
 	api.HandleFunc("/statuses", nest(h.handleGetStatuses, parseClaimsMiddleware)).Methods(http.MethodGet)
 }
