# tasks/internal/server/tasks.go
@@ -3,9 +3,11 @@ package server
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/daniilty/kanban-tt/auth/claims"
 	"github.com/daniilty/kanban-tt/tasks/internal/core"
+	"github.com/gorilla/mux"
 )
 
 const (
@@ -191,6 +193,51 @@ func (h *HTTP) updateTaskResponse(r *http.Request) response {
 		h.logger.Errorw("update task", "err", err)
 
 		return getInternalServerErrorResponse(code)
+	}
+
+	return newOKResponse(struct{}{})
+}
+
+// swagger:route Delete /api/v1/tasks/task/{id} Task taskDelete
+// Delete task
+//
+// security:
+//    api-key: []
+//
+// parameters:
+//  + name: id
+//    in: path
+//    required: true
+//    type: integer
+//
+// Returns operation result
+// responses:
+//    200: okResponse
+//    401: errorResponse Unauthorized
+//    500: errorResponse Internal server error
+func (h *HTTP) handleDeleteTask(w http.ResponseWriter, r *http.Request) {
+	resp := h.deleteTaskResponse(r)
+
+	resp.writeJSON(w)
+}
+
+func (h *HTTP) deleteTaskResponse(r *http.Request) response {
+	vars := mux.Vars(r)
+	idStr, ok := vars["id"]
+	if !ok {
+		return getBadRequestWithMsgResponse("no id", codeNoID)
+	}
+
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		msg := fmt.Sprintf("invalid id: %s", err)
+
+		return getBadRequestWithMsgResponse(msg, codeInvalidIDType)
+	}
+
+	err = h.service.DeleteTask(r.Context(), id)
+	if err != nil {
+		return getInternalServerErrorResponse(core.CodeDBFail)
 	}
 
 	return newOKResponse(struct{}{})
